# multirig

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  run.sh  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_zenoh.py  zenoh-architecture.md  zenoh-implementation-plan.md
.serena/: project.yml
docs/: design.md  message_passing.md  rigctld_tcp_protocol.md
e2e-tests/: auto_caps_detection.spec.js  autosave_profile_on_change.spec.js  band_change_error_validation.spec.js  band_change_out_of_band_validation.spec.js  band_change_validation.spec.js  band_disabled_validation.spec.js  follower_band_error_ui.spec.js  mode_change_validation.spec.js  netmind_integration.spec.js  no_sync_to_follower.spec.js  profile_helpers.js  rig_color.spec.js  rig_disable_toggle.spec.js  rig_following_scenarios.spec.js  settings_band_reset.spec.js  settings_get_capabilities_netmind.spec.js  settings_lcd_invert.spec.js  sync_to_follower_band_error.spec.js  test_connection_does_not_reset_bands.spec.js  ui.spec.js  ui_follow_toggle_no_error.spec.js  ui_forwarding.spec.js
js-tests/: app.test.js  app_interactions.test.js
mcp-servers/: README.md  chrome-devtools.json  deepwiki.json  gemini_mcp_config.json  generate_ai_config.py  github.json  jetbrains.json  netmind.json  playwright.json  puppeteer.json
multirig/: app.py  (+9 more)
multirig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+196 files in other folders)
