[project]
name = "multirig"
version = "0.1.0"
description = "Control and sync two ham radio rigs via hamlib with a modern web UI"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
]

[project.scripts]
multirig = "multirig.app:run"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
